--- a/modal.html
+++ b/modal.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>City of Sedona</title>
     <link href="css/style.css" rel="stylesheet">
-    <link href="images/decor/favicon.ico" rel="icon">
+    <link href="favicon.ico" rel="icon">
     <link href="images/decor/favicon.png" type="image/png" rel="icon">
   </head>
 
@@ -17,7 +17,7 @@
       <header class="main-header">
         <nav class="navigation">
           <a class="navigation-logo">
-            <img src="images/sedonalogo.svg" alt="Логотип сайта Седона" width="140" height="70">
+            <img src="images/sedonalogo.svg" alt="Логотип сайта Седона." width="140" height="70">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -66,7 +66,7 @@
 
         <section class="hero">
           <h1 class="visually-hidden"> Добро пожаловать в Седону</h1>
-          <img class="background-img" src="images/welcometext.svg" alt="Надоел Гранд каньон - Добро пожаловать в Седону"
+          <img class="background-img" src="images/welcometext.svg" alt="Надоел Гранд каньон - Добро пожаловать в Седону."
             width="458" height="352">
         </section>
 
@@ -88,7 +88,7 @@
                   жизнь</p>
               </div>
               <div class="img-container">
-                <img class="advantage-image" src="images/features/photo1.jpg" alt="Пейзаж города Седоны" width="800"
+                <img class="advantage-image" src="images/features/photo1.jpg" alt="Пейзаж города Седоны." width="800"
                   height="385">
               </div>
             </li>
@@ -112,7 +112,7 @@
                   разумеется</p>
               </div>
               <div class="img-container reverse">
-                <img class="advantage-image" src="images/features/photo2.jpg" alt="Вид на мост Дьявола издалека"
+                <img class="advantage-image" src="images/features/photo2.jpg" alt="Вид на мост Дьявола издалека."
                   width="800" height="385">
               </div>
             </li>
@@ -161,7 +161,7 @@
           <h2 class="subsc-header"> Подпишитесь на рассылку</h2>
           <p class="subsc-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-            <input class="text-input-field" type="text" name="email" placeholder="Ваш e-mail">
+            <input class="text-input-field" type="text" name="index-email" placeholder="Ваш e-mail" id="index-email-field">
             <button class="button subsc-button" type="submit">Подписаться</button>
           </form>
         </div>
@@ -237,12 +237,17 @@
               <label class="adult people-count">
                 <span class="adult-count-header count-header">Взрослые:</span>
                 <div class="count-block">
-                  <button type="button" class="count-minus">
-                    <svg class="minus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#756157" viewBox="0 0 20 20"><path d="M3 9v2h14V9H3Z"/></svg>
+                  <button class="count-minus" type="button">
+                    <svg class="minus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                      width="20" height="20" fill="#756157" viewBox="0 0 20 20"> <path d="M3 9v2h14V9H3Z"/></svg>
                   </button>
-                  <input type="number" class="people-number" id="adult-number" value="2" name="adult-number" min="1" max="10">
-                  <button type="button" class="count-plus">
-                    <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="#756157" viewBox="0 0 14 14"><path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z"/></svg>
+                  <input type="number" class="people-number" id="adult-number" value="2" name="adult-number" min="1"
+                    max="10">
+                  <button class="count-plus" type="button">
+                    <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                      width="14" height="14" fill="#756157" viewBox="0 0 14 14">
+                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z"/>
+                    </svg>
                   </button>
                 </div>
               </label>
@@ -250,15 +255,21 @@
                 <span class="children-count-header count-header">Дети:</span>
                 <span class="tooltip">
                   <button type="button" class="tooltip-toggle"></button>
-                  <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                  <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18
+                    лет. Дети до 6 лет размещаются бесплатно.</span>
                 </span>
                 <div class="count-block">
-                  <button type="button" class="count-minus">
-                    <svg class="minus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#756157"  viewBox="0 0 20 20"><path d="M3 9v2h14V9H3Z"/></svg>
+                  <button class="count-minus" type="button">
+                    <svg class="minus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                      width="20" height="20" fill="#756157" viewBox="0 0 20 20"> <path d="M3 9v2h14V9H3Z" /></svg>
                   </button>
-                  <input type="number" class="people-number" id="child-number" value="2" name="child-number" min="1" max="10">
-                  <button type="button" class="count-plus">
-                    <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="#756157" viewBox="0 0 14 14"><path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z"/></svg>
+                  <input type="number" class="people-number" id="child-number" value="2" name="child-number" min="1"
+                    max="10">
+                  <button class="count-plus" type="button">
+                    <svg class="plus-image" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                      width="14" height="14" fill="#756157" viewBox="0 0 14 14">
+                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                    </svg>
                   </button>
                 </div>
               </label>
